Updates content of static#index

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,3 +1,5 @@
-<div data-controller="hello">
-  <div data-target="hello.output"></div>
+<div class="flex flex-col h-screen items-center justify-center">
+  <div data-controller="hello">
+    <div class="text-3xl" data-target="hello.output"></div>
+  </div>
 </div>
